--- a/yljapp/src/main/res/layout/fragment_plot.xml
+++ b/yljapp/src/main/res/layout/fragment_plot.xml
@@ -25,24 +25,30 @@
         android:orientation="vertical">
 
         <LinearLayout
+            android:layout_marginTop="30dp"
+            android:layout_marginLeft="80dp"
+            android:layout_marginBottom="10dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/tv_quake"
+                style="@style/Test.StatusTag"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="quake" />
+                android:text="@string/test_quake_tag" />
 
             <TextView
                 android:id="@+id/tv_temp"
+                style="@style/Test.StatusTag"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="quake" />
+                android:text="@string/test_temp_tag" />
 
             <TextView
                 android:id="@+id/tv_value"
+                style="@style/Test.StatusValue"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
         </LinearLayout>
@@ -50,7 +56,10 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:padding="40dp">
+            android:paddingTop="10dp"
+            android:paddingLeft="70dp"
+            android:paddingRight="70dp"
+            android:paddingBottom="50dp">
             <com.ylj.common.widget.PlotView
                 android:id="@+id/plotview"
                 android:layout_width="match_parent"
