--- a/yljapp/src/main/res/layout/fragment_trace.xml
+++ b/yljapp/src/main/res/layout/fragment_trace.xml
@@ -23,48 +23,54 @@
         android:orientation="vertical">
 
         <LinearLayout
+            android:layout_marginTop="30dp"
+            android:layout_marginLeft="80dp"
+            android:layout_marginBottom="5dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
             <TextView
+                style="@style/Test.StatusTag"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/test_pos_x" />
 
             <TextView
                 android:id="@+id/tv_pos_x"
-                android:layout_width="wrap_content"
+                style="@style/Test.StatusValue"
                 android:layout_height="wrap_content"/>
 
             <TextView
+                style="@style/Test.StatusTag"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/test_pos_y" />
 
             <TextView
                 android:id="@+id/tv_pos_y"
-                android:layout_width="wrap_content"
+                style="@style/Test.StatusValue"
                 android:layout_height="wrap_content"/>
 
             <TextView
+                style="@style/Test.StatusTag"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/test_speed" />
 
             <TextView
                 android:id="@+id/tv_speed"
-                android:layout_width="wrap_content"
+                style="@style/Test.StatusValue"
                 android:layout_height="wrap_content" />
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:paddingLeft="60dp"
-            android:paddingRight="60dp"
-            android:paddingTop="20dp"
-            android:paddingBottom="20dp">
+            android:paddingLeft="70dp"
+            android:paddingRight="70dp"
+            android:paddingTop="10dp"
+            android:paddingBottom="40dp">
             <com.ylj.common.widget.TracePlantView
                 android:id="@+id/traceView"
                 android:layout_width="match_parent"
