--- a/yljapp/src/main/res/layout/listview_task_test_list.xml
+++ b/yljapp/src/main/res/layout/listview_task_test_list.xml
@@ -10,17 +10,21 @@
         android:layout_height="wrap_content">
         <TextView
             android:id="@+id/tv_test_name"
+            style="@style/Task.TestListTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
         <TextView
+            style="@style/Task.TestListTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="("/>
         <TextView
             android:id="@+id/tv_user"
+            style="@style/Task.TestListTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
         <TextView
+            style="@style/Task.TestListTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text=")"/>
@@ -32,32 +36,39 @@
         android:layout_height="wrap_content">
 
         <TextView
+            style="@style/Task.TestListSummary"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Test Time:"/>
+            android:text="@string/task_test_time"/>
         <TextView
+            style="@style/Task.TestListSummary"
             android:id="@+id/tv_start_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
         <TextView
+            style="@style/Task.TestListSummary"
             android:id="@+id/tv_start_time"
-            android:layout_width="wrap_content"
+            android:layout_width="80dp"
             android:layout_height="wrap_content" />
         <TextView
+            style="@style/Task.TestListSummary"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Total:"/>
+            android:text="@string/task_total_time"/>
         <TextView
+            style="@style/Task.TestListSummary"
             android:id="@+id/tv_total_time"
-            android:layout_width="wrap_content"
+            android:layout_width="80dp"
             android:layout_height="wrap_content" />
         <TextView
+            style="@style/Task.TestListSummary"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Distance:"/>
+            android:text="@string/task_distance"/>
         <TextView
+            style="@style/Task.TestListSummary"
             android:id="@+id/tv_distance"
-            android:layout_width="wrap_content"
+            android:layout_width="60dp"
             android:layout_height="wrap_content" />
     </LinearLayout>
 </LinearLayout>
