添加connectctrlactivtiy（sensor，connect ,adjust已改）

--- a/yljapp/src/main/res/layout/listview_task_test_list.xml
+++ b/yljapp/src/main/res/layout/listview_task_test_list.xml
@@ -43,6 +43,7 @@
         <TextView
             style="@style/Task.TestListSummary"
             android:id="@+id/tv_start_date"
+            android:layout_marginRight="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
         <TextView
@@ -58,7 +59,7 @@
         <TextView
             style="@style/Task.TestListSummary"
             android:id="@+id/tv_total_time"
-            android:layout_width="80dp"
+            android:layout_width="70dp"
             android:layout_height="wrap_content" />
         <TextView
             style="@style/Task.TestListSummary"
